Paper Mario Items 0.7.1 -- Update notes
- Added Castle Bleck Brick, Castle Bleck Wall, Castle Bleck Door