@@ -1,4 +1,6 @@
-﻿using Terraria;
+﻿using PaperMarioItems.Common.Players;
+using Terraria;
+using Terraria.ID;
 using Terraria.Localization;
 using Terraria.ModLoader;
 
@@ -9,6 +11,13 @@ namespace PaperMarioItems.Content.Buffs
         public override void SetStaticDefaults()
         {
             Main.buffNoSave[Type] = true;
+        }
+
+        public override void Update(Player player, ref int buffIndex)
+        {
+            player.GetModPlayer<PaperPlayer>().lifeShroomRevive = true;
+            if (player.HasBuff(BuffID.OnFire)) player.ClearBuff(BuffID.OnFire);
+            if (player.HasBuff(BuffID.OnFire3)) player.ClearBuff(BuffID.OnFire3);
         }
 
         public override LocalizedText Description => base.Description;
